RESOLVED FIXED297094
[Win] Memory leaked after normalize-doesnt-check-string-length.html
https://bugs.webkit.org/show_bug.cgi?id=297094
Summary [Win] Memory leaked after normalize-doesnt-check-string-length.html
Ian Grunert
Reported 2025-08-07 19:14:43 PDT
After running fast/dom/normalize-doesnt-check-string-length.html the test runner memory usage never returns below 7000+MB. This behavior is also observed using the MiniBrowser - navigating to normalize-doesnt-check-string-length.html and then navigating away to other websites, memory usage never returns below 7000+MB. Couldn't reproduce this behavior on Mac; seems to be Windows only. Neither --world-leaks or --gc-between-tests fixed the memory usage.
Attachments
Ian Grunert
Comment 1 2025-08-07 20:06:24 PDT
Running with USE_SYSTEM_MALLOC ON the memory usage is better on that test (~2000MB), but still doesn't go down when running subsequent tests.
Ian Grunert
Comment 2 2025-08-14 13:39:33 PDT
Radar WebKit Bug Importer
Comment 3 2025-08-14 19:15:13 PDT
EWS
Comment 4 2025-08-15 07:40:53 PDT
Committed 298752@main (71474d040dcb): <https://commits.webkit.org/298752@main> Reviewed commits have been landed. Closing PR #49407 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.