[Win] Use DiscardVirtualMemory in libpas https://bugs.webkit.org/show_bug.cgi?id=297094

Reviewed by Yusuke Suzuki.

Using DiscardVirtualMemory with a VirtualAlloc fallback; it seems that
DiscardVirtualMemory is better at returning memory to the OS faster.

Also avoiding committing and decommitting outside the requested range
due to the returned memInfo.

Fix a bug in pthread_cond_timedwait which might make the scavenger
thread run less frequently than it should.

Canonical link: https://commits.webkit.org/298752@main